--- a/final project/index.html
+++ b/final project/index.html
@@ -65,8 +65,12 @@
             ჯანმრთელობა- არის ადამიანის "სრული ფიზიკური,გონებრივი და სოციალური კეთილდღეობის მდგომარეობა." 
            </h2>
 
-          <img src="images/hlth.bdy.sl.jpg">
+         </div>  
 
+         <div class ="section">
+
+          <img src="images/hlth.bdy.sl.jpg">
+   
           <h3>
              ჯანსაღი ცხოვრებისა და ჰარმონიისთვის როგორც ვხედავთ ძალიან მნიშვნელოვანია სწორი კვება და ფიზიკური აქტივობა, ამასთანავე ,მნიშვნელოვანია განტვირთვა. XXI-საუკუნეში ასევე დიდი პოპულარობით სარგებლობს მედიტაციაც.მედიტაცია განტვირთვის ერთ-ერთი ძალიან კარგი ,სწრაფი და მარტივი მეთოდია.ასევე ზალიან კარგია ბუნებაში ყოფნა ,სერინობა .
              ასევე ვფიქრობ,რომ ყველაფერი ის რაც სიამოვნებას განიჭებთ და თქვენთვის კომფორტულია,ყველაფერი ეს დაგეხმარებათ განტვირთვაში.
