--- a/final project/about.html
+++ b/final project/about.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Healthy Life Style</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+   <title>Healthy Life Style</title>
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
    <header>
-        <a href ="https://www.tbceducation.ge/ " target="_blank"><img src="images/TBC.png.png"></a>
+      <div class="main-container">
+         <a href="https://www.tbceducation.ge/ " target="_blank"><img src="images/TBC.png.png"></a>
+         <div class="main">
+            <ul>
+               <li><a href="index.html">მთავარი</a></li>
+               <li><a href="about.html">ჩვენს შესახებ</a></li>
+               <li><a href="service.html">სერვისები</a></li>
+               <li><a href="news.html">სიახლეები</a></li>
+               <li><a href="contact.html">კონტაქტი</a></li>
+               <li><a class="registration" href="registration.html">რეგისტრაცია</a></li>
 
-      <div class="main">
-         <ul>
-            <li><a href="index.html">მთავარი</a></li>
-            <li><a href="about.html">ჩვენს შესახებ</a></li>
-            <li><a href="service.html">სერვისები</a></li>
-            <li><a href="news.html">სიახლეები</a></li>
-            <li><a href="contact.html">კონტაქტი</a></li>
-            <li><a class="registration" href="registration.html">რეგისტრაცია</a></li>
+            </ul>
+         </div>
+      </div>
+   </header>
+   <h3>
+      ამ ვებგვერდის მიზანია,დაეხმაროს და ინფორმირებული გახადოს,
+      ყველა ის ადამიანი ,ვისაც სურს იცხოვროს ჯანსაღად.
+   </h3>
 
-         </ul>
+</body>
 
-         <h3>
-              ამ ვებგვერდის მიზანია,დაეხმაროს და ინფორმირებული გახადოს,
-              ყველა ის ადამიანი ,ვისაც სურს იცხოვროს ჯანსაღად.
-         </h3>
-
-         </body>
-         </html>
+</html>
